[tool.poetry]
name = "junior-developer-backend"
version = "0.1.0"
description = ""
authors = [
    "Citizens Advice SORT <technology@casort.org>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = {extras = ["standard"], version = "^0.116.1"}
pydantic = ">=2.11.7,<3.0.0"
uvicorn = "^0.35.0"
httpx = "^0.28.1"
beautifulsoup4 = "^4.13.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
